--- a/PLANT_PPE/PLANT_PPE.csproj
+++ b/PLANT_PPE/PLANT_PPE.csproj
@@ -4346,6 +4346,7 @@
     </None>
     <Content Include="Scripts\moment.min.js" />
     <Content Include="Scripts\Page\login.js" />
+    <Content Include="Scripts\Page\SettingAgreement.js" />
     <Content Include="Scripts\Page\SettingMenu.js" />
     <Content Include="Scripts\Page\SettingUser.js" />
     <Content Include="Web.config" />
@@ -4364,6 +4365,7 @@
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Setting\Users.cshtml" />
     <Content Include="Views\Setting\Menu.cshtml" />
+    <Content Include="Views\Setting\Agreement.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
