--- a/PLANT_PPE/PLANT_PPE.csproj
+++ b/PLANT_PPE/PLANT_PPE.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\MenuController.cs" />
+    <Compile Include="Controllers\PPEController.cs" />
     <Compile Include="Controllers\SettingController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -147,6 +148,7 @@
       <DependentUpon>DB_PLANT_PPE.dbml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\Cls_PPE.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\assets\css\codebase.css" />
@@ -4346,6 +4348,7 @@
     </None>
     <Content Include="Scripts\moment.min.js" />
     <Content Include="Scripts\Page\login.js" />
+    <Content Include="Scripts\Page\RegisterPPE.js" />
     <Content Include="Scripts\Page\SettingAgreement.js" />
     <Content Include="Scripts\Page\SettingMenu.js" />
     <Content Include="Scripts\Page\SettingUser.js" />
@@ -4366,6 +4369,7 @@
     <Content Include="Views\Setting\Users.cshtml" />
     <Content Include="Views\Setting\Menu.cshtml" />
     <Content Include="Views\Setting\Agreement.cshtml" />
+    <Content Include="Views\PPE\Register.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
