--- a/PLANT_PPE/PLANT_PPE.csproj
+++ b/PLANT_PPE/PLANT_PPE.csproj
@@ -134,6 +134,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ApprovalController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\MenuController.cs" />
@@ -4347,6 +4348,8 @@
       <DependentUpon>DB_PLANT_PPE.dbml</DependentUpon>
     </None>
     <Content Include="Scripts\moment.min.js" />
+    <Content Include="Scripts\Page\ApprovalSecHead.js" />
+    <Content Include="Scripts\Page\DetailPPE.js" />
     <Content Include="Scripts\Page\login.js" />
     <Content Include="Scripts\Page\RegisterPPE.js" />
     <Content Include="Scripts\Page\SettingAgreement.js" />
@@ -4370,6 +4373,8 @@
     <Content Include="Views\Setting\Menu.cshtml" />
     <Content Include="Views\Setting\Agreement.cshtml" />
     <Content Include="Views\PPE\Register.cshtml" />
+    <Content Include="Views\Approval\SectionHead.cshtml" />
+    <Content Include="Views\Approval\DetailPPE.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
