--- a/PLANT_PPE/PLANT_PPE.csproj
+++ b/PLANT_PPE/PLANT_PPE.csproj
@@ -4348,6 +4348,8 @@
       <DependentUpon>DB_PLANT_PPE.dbml</DependentUpon>
     </None>
     <Content Include="Scripts\moment.min.js" />
+    <Content Include="Scripts\Page\ApprovalPlantDeptHead.js" />
+    <Content Include="Scripts\Page\ApprovalPlantManager.js" />
     <Content Include="Scripts\Page\ApprovalSecHead.js" />
     <Content Include="Scripts\Page\DetailPPE.js" />
     <Content Include="Scripts\Page\login.js" />
@@ -4379,6 +4381,8 @@
     <Content Include="Views\Approval\DetailPPE.cshtml" />
     <Content Include="Views\Setting\District.cshtml" />
     <Content Include="Views\Setting\MappingApproval.cshtml" />
+    <Content Include="Views\Approval\PlantManager.cshtml" />
+    <Content Include="Views\Approval\PlantDeptHead.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
