--- a/PLANT_PPE/PLANT_PPE.csproj
+++ b/PLANT_PPE/PLANT_PPE.csproj
@@ -4350,6 +4350,7 @@
     <Content Include="Scripts\moment.min.js" />
     <Content Include="Scripts\Page\ApprovalPlantDeptHead.js" />
     <Content Include="Scripts\Page\ApprovalPlantManager.js" />
+    <Content Include="Scripts\Page\ApprovalProjectManager.js" />
     <Content Include="Scripts\Page\ApprovalSecHead.js" />
     <Content Include="Scripts\Page\DetailPPE.js" />
     <Content Include="Scripts\Page\login.js" />
@@ -4383,6 +4384,7 @@
     <Content Include="Views\Setting\MappingApproval.cshtml" />
     <Content Include="Views\Approval\PlantManager.cshtml" />
     <Content Include="Views\Approval\PlantDeptHead.cshtml" />
+    <Content Include="Views\Approval\ProjectManager.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
