--- a/PLANT_PPE/PLANT_PPE.csproj
+++ b/PLANT_PPE/PLANT_PPE.csproj
@@ -46,6 +46,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="LdapAuthentication">
+      <HintPath>..\..\..\..\..\Documents\WORK in KPP\Audit\Audit\AUDIT_API\AUDIT_API\bin\LdapAuthentication.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -135,6 +138,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ApprovalController.cs" />
+    <Compile Include="Controllers\ReviewController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\MenuController.cs" />
@@ -4351,6 +4355,7 @@
     <Content Include="Scripts\Page\ApprovalSecHead.js" />
     <Content Include="Scripts\Page\DetailPPE.js" />
     <Content Include="Scripts\Page\login.js" />
+    <Content Include="Scripts\Page\Review.js" />
     <Content Include="Scripts\Page\RegisterPPE.js" />
     <Content Include="Scripts\Page\SettingAgreement.js" />
     <Content Include="Scripts\Page\MappingApproval.js" />
@@ -4379,6 +4384,9 @@
     <Content Include="Views\Approval\DetailPPE.cshtml" />
     <Content Include="Views\Setting\District.cshtml" />
     <Content Include="Views\Setting\MappingApproval.cshtml" />
+    <Content Include="Views\PPE\Review.cshtml" />
+    <Content Include="Views\Review\Index.cshtml" />
+    <Content Include="Views\PPE\DetailPPE.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
