--- a/PLANT_PPE/PLANT_PPE.csproj
+++ b/PLANT_PPE/PLANT_PPE.csproj
@@ -4358,6 +4358,7 @@
     <Content Include="Scripts\Page\ApprovalProjectManager.js" />
     <Content Include="Scripts\Page\ApprovalSecHead.js" />
     <Content Include="Scripts\Page\DetailPPE.js" />
+    <Content Include="Scripts\Page\DetailReview.js" />
     <Content Include="Scripts\Page\login.js" />
     <Content Include="Scripts\Page\Review.js" />
     <Content Include="Scripts\Page\RegisterPPE.js" />
