--- a/PLANT_PPE/Web.config
+++ b/PLANT_PPE/Web.config
@@ -15,13 +15,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
 	<!--Local-->
-	<add key="WebApp_Link" value="https://localhost:44366/"/>
+	<!--<add key="WebApp_Link" value="https://localhost:44366/"/>-->
 
 	<!--development-->
-	<!--<add key="WebApp_Link" value="http://10.14.101.111:1906/"/>-->
-
-	<!--Production-->
-	<!--<add key="WebApp_Link" value="http://10.14.101.2:1311/"/>-->
+	<add key="WebApp_Link" value="http://10.14.101.111:1906/"/>
 	  
   </appSettings>
   <system.web>
