--- a/PLANT_PPE/PLANT_PPE.csproj
+++ b/PLANT_PPE/PLANT_PPE.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Controllers\MenuController.cs" />
     <Compile Include="Controllers\PPEController.cs" />
     <Compile Include="Controllers\SettingController.cs" />
+    <Compile Include="Controllers\SMController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -4417,6 +4418,7 @@
     <Content Include="Scripts\Page\SettingMenu.js" />
     <Content Include="Scripts\Page\SettingDistrict.js" />
     <Content Include="Scripts\Page\SettingUser.js" />
+    <Content Include="Scripts\Page\SMReview.js" />
     <Content Include="Scripts\WebForms\DetailsView.js" />
     <Content Include="Scripts\WebForms\Focus.js" />
     <Content Include="Scripts\WebForms\GridView.js" />
@@ -4472,6 +4474,7 @@
     <Content Include="Views\Received\Index.cshtml" />
     <Content Include="Views\Approval\ProjectManagerPenerima.cshtml" />
     <Content Include="Views\Approval\DivHeadOPR.cshtml" />
+    <Content Include="Views\SM\Review.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
