--- a/API_PLANT_PPE/Web.config
+++ b/API_PLANT_PPE/Web.config
@@ -102,6 +102,14 @@
         serializeAs="String">
         <value>https://ews-kpd.kppmining.net/ews/services/EquipmentService</value>
       </setting>
+      <setting name="API_PLANT_PPE_RefCodesService_RefCodesService"
+        serializeAs="String">
+        <value>https://ews-kpd.kppmining.net/ews/services/RefCodesService</value>
+      </setting>
+      <setting name="API_PLANT_PPE_EquipmentReferenceService_EquipmentReferenceService"
+        serializeAs="String">
+        <value>https://ews-kpd.kppmining.net/ews/services/EquipmentReferenceService</value>
+      </setting>
     </API_PLANT_PPE.Properties.Settings>
   </applicationSettings>
   <system.web>
