--- a/API_PLANT_PPE/Properties/Settings.settings
+++ b/API_PLANT_PPE/Properties/Settings.settings
@@ -5,5 +5,11 @@
     <Setting Name="API_PLANT_PPE_EquipmentServices_EquipmentService" Type="(Web Service URL)" Scope="Application">
       <Value Profile="(Default)">https://ews-kpd.kppmining.net/ews/services/EquipmentService</Value>
     </Setting>
+    <Setting Name="API_PLANT_PPE_RefCodesService_RefCodesService" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">https://ews-kpd.kppmining.net/ews/services/RefCodesService</Value>
+    </Setting>
+    <Setting Name="API_PLANT_PPE_EquipmentReferenceService_EquipmentReferenceService" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">https://ews-kpd.kppmining.net/ews/services/EquipmentReferenceService</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
