--- a/API_PLANT_PPE/Properties/Settings.settings
+++ b/API_PLANT_PPE/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="API_PLANT_PPE_EquipmentReferenceService_EquipmentReferenceService" Type="(Web Service URL)" Scope="Application">
       <Value Profile="(Default)">https://ews-kpd.kppmining.net/ews/services/EquipmentReferenceService</Value>
     </Setting>
+    <Setting Name="API_PLANT_PPE_ScreenService_ScreenService" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">https://ews-kpd.kppmining.net/ews/services/ScreenService</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
