Console App MSO687

--- a/MSO687_CONSOLEAPP/App.config
+++ b/MSO687_CONSOLEAPP/App.config
@@ -30,4 +30,11 @@
             </setting>
         </MSO687_CONSOLEAPP.Properties.Settings>
     </applicationSettings>
+	<system.web>
+		<webServices>
+			<soapExtensionTypes>
+				<add type="EllipseWebServicesClient.AuthenticationExtension, EllipseWebServicesClient" priority="1" />
+			</soapExtensionTypes>
+		</webServices>
+	</system.web>
 </configuration>
