--- a/PLANT_PPE/Web.config
+++ b/PLANT_PPE/Web.config
@@ -14,9 +14,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	  
     <!--Local-->
-    <!--<add key="WebApp_Link" value="https://localhost:44366/" />-->
+    <add key="WebApp_Link" value="https://localhost:44366/" />
     <!--development-->
-    <add key="WebApp_Link" value="http://10.14.101.111:1906/"/>
+    <!--<add key="WebApp_Link" value="http://10.14.101.111:1906/"/>-->
 
 	<add key="report_server_url" value="http://10.14.101.181/Reports_RPTPROD/" />
 	<add key="report_path" value="/PPE/"/>
