--- a/PLANT_PPE/PLANT_PPE.csproj
+++ b/PLANT_PPE/PLANT_PPE.csproj
@@ -4418,6 +4418,11 @@
     <Content Include="Scripts\Page\ApprovalProjectManagerPenerima.js" />
     <Content Include="Scripts\Page\ApprovalSecHead.js" />
     <Content Include="Scripts\Page\DetailPPE.js" />
+    <Content Include="Scripts\Page\DetailPPE_DivHead.js" />
+    <Content Include="Scripts\Page\DetailPPE_DivHead_OPR.js" />
+    <Content Include="Scripts\Page\DetailPPE_PM.js" />
+    <Content Include="Scripts\Page\DetailPPE_ProjectManager.js" />
+    <Content Include="Scripts\Page\DetailPPE_ProjectManager_Penerima.js" />
     <Content Include="Scripts\Page\DetailReview.js" />
     <Content Include="Scripts\Page\login.js" />
     <Content Include="Scripts\Page\Received.js" />
@@ -4494,6 +4499,11 @@
     <Content Include="Views\Setting\UserApprove.cshtml" />
     <Content Include="Views\Setting\AccountProfile.cshtml" />
     <Content Include="Views\Approval\Detail_DeptHead.cshtml" />
+    <Content Include="Views\Approval\DetailPPE_PM.cshtml" />
+    <Content Include="Views\Approval\DetailPPE_ProjectManager.cshtml" />
+    <Content Include="Views\Approval\DetailPPE_ProjectManager_Penerima.cshtml" />
+    <Content Include="Views\Approval\DetailPPE_DivHead.cshtml" />
+    <Content Include="Views\Approval\DetailPPE_DivHead_OPR.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
