--- a/API_PLANT_PPE/Web.config
+++ b/API_PLANT_PPE/Web.config
@@ -20,12 +20,12 @@
     <add key="report_server_url" value="http://10.14.101.181/Reports_RPTPROD"/>
     <add key="report_path" value="/PPE/"/>
 	<!--login ellipse-->
-	<add key="username" value="dailykpp" />
+	<!--<add key="username" value="dailykpp" />
 	<add key="password" value="kpp12345" />
-	<add key="pos_id" value="KP2SD03" />
-	<!--<add key="username" value="dev010" />
-	<add key="password" value="Kppdev010" />
-	<add key="pos_id" value="KP2SD021" />-->
+	<add key="pos_id" value="KP2SD03" />-->
+	<add key="username" value="koi001" />
+	<add key="password" value="Persada123" />
+	<add key="pos_id" value="KP2SD021" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8">
