--- a/API_PLANT_PPE/Web.config
+++ b/API_PLANT_PPE/Web.config
@@ -103,18 +103,18 @@
     <API_PLANT_PPE.Properties.Settings>
       <setting name="API_PLANT_PPE_EquipmentServices_EquipmentService"
         serializeAs="String">
-        <value>https://ews-kpd.kppmining.net/ews/services/EquipmentService</value>
+        <value>https://ews-kpt.kppmining.net/ews/services/EquipmentService</value>
       </setting>
       <setting name="API_PLANT_PPE_RefCodesService_RefCodesService"
         serializeAs="String">
-        <value>https://ews-kpd.kppmining.net/ews/services/RefCodesService</value>
+        <value>https://ews-kpt.kppmining.net/ews/services/RefCodesService</value>
       </setting>
       <setting name="API_PLANT_PPE_EquipmentReferenceService_EquipmentReferenceService"
         serializeAs="String">
-        <value>https://ews-kpd.kppmining.net/ews/services/EquipmentReferenceService</value>
+        <value>https://ews-kpt.kppmining.net/ews/services/EquipmentReferenceService</value>
       </setting>
       <setting name="API_PLANT_PPE_ScreenService_ScreenService" serializeAs="String">
-        <value>https://ews-kpd.kppmining.net/ews/services/ScreenService</value>
+        <value>https://ews-kpt.kppmining.net/ews/services/ScreenService</value>
       </setting>
     </API_PLANT_PPE.Properties.Settings>
   </applicationSettings>
